# todolist-v2

./: README.md  todolist-v2.code-workspace
backend/: .env  .gitignore  alembic.ini  app.http  local.db  main.py  pyproject.toml  requirements.txt  try.py
backend/alembic/: env.py
backend/alembic/versions/: 29ce318c0999_create_db.py  3fbe6e0256e1_create_initial_table.py  4e2973b9a581_create_initial_table.py  783886314401_create_initial_table.py  96fdd068681d_create_initial_table.py  9b06b683394e_upd_table.py  c058d5287bce_init_supabase_schema.py  c79333bbc692_create_initial_table.py  fa902de95601_create_initial_table.py
backend/src/: engine.py  exception.py  main.py
backend/src/core/: security.py
backend/src/dto/: todolist_dto.py
backend/src/dtos/: todolist_dto.py
backend/src/models/: Task.py  todolist_model.py
backend/src/routes/: task_route.py
backend/src/services/: task_service.py  user_service.py
backend/src/tests/: tasks_test.py  user_test.py
frontend/: package-lock.json  package.json
frontend/src-tauri/: tauri.conf.json
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts  layout.css
frontend/src/routes/tasks/: +page.svelte
frontend/src/routes/tasks/list/: +page.svelte  +page.ts
